Done with sections

--- a/ItemCodes.Console/ItemCodes.Console.csproj
+++ b/ItemCodes.Console/ItemCodes.Console.csproj
@@ -15,4 +15,10 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ItemCodes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
